--- a/live-game.html
+++ b/live-game.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<link href="favicon.ico" rel="icon" type="image/x-icon"/>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Feature Removed</title>
-<!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
-<style media="screen" type="text/css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Feature Removed</title>
+      <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
+  <style media="screen" type="text/css">
     .layer1_class {
       position: absolute;
       z-index: 1;
@@ -163,8 +163,8 @@
       }
     }
   </style>
-<!-- Styles for the No-JavaScript message -->
-<style>
+  <!-- Styles for the No-JavaScript message -->
+  <style>
     .no-js-message {
       background: #2c4762;
       color: red;
@@ -177,20 +177,22 @@
       top: 0;
     }
   </style>
-<!-- No-JavaScript message -->
-<noscript>
-<div class="no-js-message">
+
+  <!-- No-JavaScript message -->
+  <noscript>
+    <div class="no-js-message">
       Please enable JavaScript to use this website properly.
     </div>
-</noscript>
-<div class="loader">
-<div class="loaderr-container">
-<div class="loaderr"></div>
-<div class="loading-text">Loading...</div>
-</div>
-</div>
+  </noscript>
+  <div class="loader">
+    <div class="loaderr-container">
+      <div class="loaderr"></div>
+      <div class="loading-text">Loading...</div>
+    </div>
+  </div>
 
-<script>
+  </div>
+  <script>
     // This function will execute after the full page has finished loading
     window.onload = function () {
       // Trigger fade-out animation for the loader
@@ -205,8 +207,8 @@
 
     }
   </script>
-<!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
-<style>
+  <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
+    <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -262,26 +264,27 @@
         }
     }
 </style>
-<meta content="online multiplayer game. Learn more at Unlim8ted Studio Productions." name="description"/></head>
-<body>
-<div id="inner-wrap">
-<div class="logo" style="z-index: 2;">
-<a href="/">
-<img src="images/logo/logo.png"/> <!--https://images.unlim8ted.com/logo/logo.png-->
-</a>
-</div>
-<div class="container">
-<h1>Sorry!</h1>
-<p>Due to security concerns, we have decided to remove this feature.</p>
-<p>If you were submitting feedback, you can instead send it to <a href="mailto:contact@unlim8ted.com">contact@unlim8ted.com</a>.</p>
-<p>If you were looking for help, you can contact <a href="mailto:support@unlim8ted.com">support@unlim8ted.com</a>.</p>
-<p>If you want this feature re-added and happen to be a web developer, you can contact <a href="mailto:enquiries@unlim8ted.com">enquiries@unlim8ted.com</a> if you want to help.</p>
-<button onclick="history.back()">Go Back</button>
-</div>
-</div></body>
-<!-- Copyright -->
-<div style="margin-top: 20px;">
-<p>© 2024 Unlim8ted Studio Productions. All rights reserved.</p>
-</div>
 
+</head>
+<body>
+    <div id="inner-wrap">
+        <div class="logo" style="z-index: 2;">
+          <a href="/">
+            <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
+          </a>
+        </div>
+    <div class="container">
+        <h1>Sorry!</h1>
+        <p>Due to security concerns, we have decided to remove this feature.</p>
+        <p>If you were submitting feedback, you can instead send it to <a href="mailto:contact@unlim8ted.com">contact@unlim8ted.com</a>.</p>
+        <p>If you were looking for help, you can contact <a href="mailto:support@unlim8ted.com">support@unlim8ted.com</a>.</p>
+        <p>If you want this feature re-added and happen to be a web developer, you can contact <a href="mailto:enquiries@unlim8ted.com">enquiries@unlim8ted.com</a> if you want to help.</p>
+        <button onclick="history.back()">Go Back</button>
+    </div>
+</body>
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+      </div>
+    </div>
 </html>
