--- a/music-generator.html
+++ b/music-generator.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Transformers.js Example</title>
-<meta content="online music generator. Learn more at Unlim8ted Studio Productions." name="description"/></head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Transformers.js Example</title>
+</head>
 <body>
-<h1>Transformers.js Example</h1>
-<div id="result"></div>
-<script type="module">
+    <h1>Transformers.js Example</h1>
+    <div id="result"></div>
+
+    <script type="module">
         import { pipeline } from 'https://cdn.jsdelivr.net/npm/@xenova/transformers@2.17.2';
 
         // Asynchronous function to load and use the pipeline
