--- a/podcasts/ad.html
+++ b/podcasts/ad.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Neon Product Layout</title>
 <style>
     /* Basic Reset */
@@ -131,46 +130,51 @@
         right: 280px;
     }
 </style>
-<meta content="Unlim8ted Ad, Part of an unlimt8ed ad. Learn more at Unlim8ted Studio Productions." name="description"/></head>
+</head>
 <body>
+
 <div class="container">
 <!-- Product 1 -->
 <div class="product">
-<div class="product-box">
-<img alt="Product 1 Image" src="images/products/films/The Life Of A Meatball.jpg"/>
+    <div class="product-box">
+        <img src="images/products/films/The Life Of A Meatball.jpg" alt="Product 1 Image">
+    </div>
+    <div class="line"></div>
+    <div class="product-details">
+        <h2>The Life of a Meatball - Short Film</h2>
+        <p>Deep within the Tasmanian Jungles lie meatball factories. These factories produce meatballs, although something quite special can happen as shown in this captivating documentary.</p>
+        <span class="price">$0.00</span>
+    </div>
 </div>
-<div class="line"></div>
-<div class="product-details">
-<h2>The Life of a Meatball - Short Film</h2>
-<p>Deep within the Tasmanian Jungles lie meatball factories. These factories produce meatballs, although something quite special can happen as shown in this captivating documentary.</p>
-<span class="price">$0.00</span>
-</div>
-</div>
+
 <!-- Product 2 -->
 <div class="product">
-<div class="product-box">
-<img alt="Product 2 Image" src="images/products/clothes/sfesehjkl_-removebg-preview.png"/>
+    <div class="product-box">
+        <img src="images/products/clothes/sfesehjkl_-removebg-preview.png" alt="Product 2 Image">
+    </div>
+    <div class="line"></div>
+    <div class="product-details">
+        <h2>Unlim8ted T-Shirt</h2>
+        <p>Stylish and comfortable, available now for a low price.</p>
+        <span class="price">$24.99</span>
+    </div>
 </div>
-<div class="line"></div>
-<div class="product-details">
-<h2>Unlim8ted T-Shirt</h2>
-<p>Stylish and comfortable, available now for a low price.</p>
-<span class="price">$24.99</span>
-</div>
-</div>
+
 <!-- Product 3 -->
 <div class="product">
-<div class="product-box">
-<img alt="Product 3 Image" src="images/products/films/TheGlitchCover.png"/>
+    <div class="product-box">
+        <img src="images/products/films/TheGlitchCover.png" alt="Product 3 Image">
+    </div>
+    <div class="line"></div>
+    <div class="product-details">
+        <h2>The Glitch - Short Film</h2>
+        <p>An amazing short film about what "reality" actually means.</p>
+        <span class="price">$0.00</span>
+    </div>
 </div>
-<div class="line"></div>
-<div class="product-details">
-<h2>The Glitch - Short Film</h2>
-<p>An amazing short film about what "reality" actually means.</p>
-<span class="price">$0.00</span>
-</div>
-</div>
-<!-- Add more products as needed -->
+
+
+    <!-- Add more products as needed -->
 </div>
 <script>
     function smoothScroll(duration) {
@@ -211,5 +215,6 @@
         });
     });
 </script>
+
 </body>
 </html>
