--- a/squareproduct.html
+++ b/squareproduct.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-
 <html lang="en">
+
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Product Details</title>
-<!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
-<style media="screen" type="text/css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product Details</title>
+      <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
+  <style media="screen" type="text/css">
     .layer1_class {
       position: absolute;
       z-index: 1;
@@ -162,8 +162,8 @@
       }
     }
   </style>
-<!-- Styles for the No-JavaScript message -->
-<style>
+  <!-- Styles for the No-JavaScript message -->
+  <style>
     .no-js-message {
       background: #2c4762;
       color: red;
@@ -176,20 +176,22 @@
       top: 0;
     }
   </style>
-<!-- No-JavaScript message -->
-<noscript>
-<div class="no-js-message">
+
+  <!-- No-JavaScript message -->
+  <noscript>
+    <div class="no-js-message">
       Please enable JavaScript to use this website properly.
     </div>
-</noscript>
-<div class="loader">
-<div class="loaderr-container">
-<div class="loaderr"></div>
-<div class="loading-text">Loading...</div>
-</div>
-</div>
+  </noscript>
+  <div class="loader">
+    <div class="loaderr-container">
+      <div class="loaderr"></div>
+      <div class="loading-text">Loading...</div>
+    </div>
+  </div>
 
-<script>
+  </div>
+  <script>
     // This function will execute after the full page has finished loading
     window.onload = function () {
       // Trigger fade-out animation for the loader
@@ -204,9 +206,9 @@
 
     }
   </script>
-<!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
-<link href="styles.css" rel="stylesheet"/>
-<style>
+  <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
+    <link rel="stylesheet" href="styles.css">
+    <style>
         /* Custom styles for better presentation */
         body {
             font-family: Arial, sans-serif;
@@ -377,9 +379,9 @@
             border-bottom: 1px solid #ddd;
         }
     </style>
-<!-- Font Awesome Icon Library -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-<style>
+    <!-- Font Awesome Icon Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
         * {
             box-sizing: border-box;
         }
@@ -489,12 +491,16 @@
             }
         }
     </style>
-<html lang="en">
-<head>
-<link href="favicon.ico" rel="icon" type="image/x-icon"/>
 </head>
+<html lang="en">
+
+<head>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+</head>
+
 <body>
-<style>  
+  <style>  
     /* logo */
     .logo {
         position: absolute;
@@ -517,7 +523,8 @@
         }
     }
 </style>
-<style>
+
+  <style>
     :root {
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
@@ -1155,13 +1162,13 @@
       /* Remove the border if not needed */
     }
   </style>
-<div id="inner-wrap">
-<div class="logo" style="z-index: 2;">
-<a href="/">
-<img src="images/logo/logo.png"/> <!--https://images.unlim8ted.com/logo/logo.png-->
-</a>
-</div>
-<style>
+        <div id="inner-wrap">
+          <div class="logo" style="z-index: 2;">
+            <a href="/">
+              <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
+            </a>
+          </div>
+          <style>
 
             .dropdown-content {
               display: none;
@@ -1212,44 +1219,48 @@
             }
             
               </style>
-<script>
+              <script>
               function toggleMenu() {
                 const navLinks = document.getElementById("navbarLinks");
                 navLinks.classList.toggle("show");
               }
               </script>
-<nav class="navbar">
-<div class="navbar-header">
-<button class="navbar-toggle" onclick="toggleMenu()" style="position:absolute; top:5px; left:1%">☰</button>
-<ul class="nav-links" id="navbarLinks">
-<li class="nav-item"><a href="/">Home</a></li>
-<li class="nav-item"><a href="/#products">Products</a></li>
-<li class="nav-item"><a href="/#help">Help</a></li>
-<li class="nav-item"><a href="/#about">About</a></li>
-<li class="nav-item dropdown">
-<a class="dropbtn" href="javascript:void(0)">More</a>
-<div class="dropdown-content">
-<a href="/#portfolio">Portfolio</a>
-<a href="/#contact">Contact</a>
-<a href="/#blog">Blog</a>
-<a href="/live-chat">Live Chat</a>
-<a href="/live-game">Live Chat and Game</a>
-<a href="/puzzle-squares">Puzzle Squares</a>
-</div>
-</li>
-</ul>
-</div>
-</nav>
-<div class="embed-container">
-<embed class="full-screen-embed" src="@product url@"/>
-</div>
-</div></body>
-</html>
-<section class="not-found-section" id="not-found">
-<h2>Product Not Found</h2>
-<p>We couldn't find the product you were looking for.</p>
-</section>
-<script>
+              <nav class="navbar">
+                <div class="navbar-header">
+                  <button class="navbar-toggle" style="position:absolute; top:5px; left:1%" onclick="toggleMenu()">☰</button>
+                  <ul class="nav-links" id="navbarLinks">
+                    <li class="nav-item"><a href="/">Home</a></li>
+                    <li class="nav-item"><a href="/#products">Products</a></li>
+                    <li class="nav-item"><a href="/#help">Help</a></li>
+                    <li class="nav-item"><a href="/#about">About</a></li>
+                    <li class="nav-item dropdown">
+                      <a href="javascript:void(0)" class="dropbtn">More</a>
+                      <div class="dropdown-content">
+                        <a href="/#portfolio">Portfolio</a>
+                        <a href="/#contact">Contact</a>
+                        <a href="/#blog">Blog</a>
+                        <a href="/live-chat">Live Chat</a>
+                        <a href="/live-game">Live Chat and Game</a>
+                        <a href="/puzzle-squares">Puzzle Squares</a>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
+
+  <div class="embed-container">
+    <embed class="full-screen-embed" src="@product url@">
+  </div>
+
+
+</body>
+
+    </html>
+    <section id="not-found" class="not-found-section">
+        <h2>Product Not Found</h2>
+        <p>We couldn't find the product you were looking for.</p>
+    </section>
+    <script>
 
         // Function to replace placeholders with product details
         function replacePlaceholders() {
@@ -1258,8 +1269,8 @@
             }
         replacePlaceholders();
     </script>
-<!-- Copyright -->
-<div style="margin-top: 20px;">
-<p>© 2024 Unlim8ted Studio Productions. All rights reserved.</p>
-</div>
-</html>
+    <!-- Copyright -->
+    <div style="margin-top: 20px;">
+      <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+    </div>
+  </div>
